--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URL= mongodb+srv://sameersattar:sameersattar@cluster0.n1lmlew.mongodb.net/ 
 PORT= 4000
+JWT_TOKEN_SECRET= SameerSattarShiakhniosnxsoinxsinxsicxsm
